--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app">
+      <h1>check datatables.ts and main.ts</h1>
       <table id="example" class="display" style="width:100%">
         <thead>
             <tr>
